[gd_scene load_steps=4 format=3 uid="uid://bqgvwx8i8m0k3"]

[ext_resource type="Script" uid="uid://clx6ja8ytcdkk" path="res://scenes/game_scene.gd" id="1_2m8c5"]
[ext_resource type="Script" uid="uid://d4gfbjfvb4ex8" path="res://scripts/visual_novel_manager.gd" id="2_onqr8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xk4s"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2m8c5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="CharacterDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -250.0
offset_right = 1152.0
grow_vertical = 0

[node name="DialoguePanel" type="Panel" parent="DialogueContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xk4s")

[node name="TextCanvas" type="Control" parent="DialogueContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterName" type="Label" parent="DialogueContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -60.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Personagem"

[node name="DialogueText" type="RichTextLabel" parent="DialogueContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Texto do diálogo aparece aqui..."

[node name="ContinueButton" type="Button" parent="DialogueContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Continuar"

[node name="ChoicesPanel" type="Panel" parent="DialogueContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -388.0
offset_right = 250.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xk4s")

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueContainer/ChoicesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SystemMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="Panel" parent="SystemMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xk4s")

[node name="VBoxContainer" type="VBoxContainer" parent="SystemMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="SystemMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu do Sistema"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SystemMenu/MenuPanel/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="SystemMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Salvar Jogo"

[node name="LoadButton" type="Button" parent="SystemMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Carregar Jogo"

[node name="SettingsButton" type="Button" parent="SystemMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "Configurações"

[node name="MenuButton" type="Button" parent="SystemMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 90.0
offset_right = 100.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu Principal"

[node name="VisualNovelManager" type="Node" parent="."]
script = ExtResource("2_onqr8")
